--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
       DB_HOST: mysql
       DB_PORT: 3306
       DB_NAME: tech_test
-      DB_USER: root
-      DB_PASSWORD: root_password
+      DB_USER: app_user
+      DB_PASSWORD: app_password
+
       # Configuration Redis
       REDIS_HOST: redis
       REDIS_PORT: 6379
+
       # Configuration RabbitMQ
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
@@ -31,8 +33,12 @@ services:
     environment:
       MYSQL_DATABASE: tech_test
       MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_USER: app_user
+      MYSQL_PASSWORD: app_password
     ports:
       - "3306:3306"
+    volumes:
+      - ./sql/ddl.sql:/docker-entrypoint-initdb.d/01-init.sql
   redis:
     image: redis:7-alpine
     ports:
