--- a/service/.env.example
+++ b/service/.env.example
@@ -14,6 +14,10 @@ DB_USER=app_user
 DB_PASSWORD=
 DB_CONNECTION_LIMIT=10
 
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 # RabbitMQ
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
