✅ [TEST] Refactoring tests d'intégration avec Redis
- Ajout de @testcontainers/redis
- Support Redis dans le setup Testcontainers
- Réorganisation des tests : 1 appel REST = 1 test complet
- Chaque test vérifie MySQL, Redis et RabbitMQ

--- a/service/package.json
+++ b/service/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@testcontainers/mysql": "^11.11.0",
     "@testcontainers/rabbitmq": "^11.11.0",
+    "@testcontainers/redis": "^11.11.0",
     "@types/amqplib": "^0.10.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
