--- a/service/package.json
+++ b/service/package.json
@@ -9,10 +9,12 @@
     "start": "node dist/index.js",
     "test:unit": "jest --config jest.config.unit.js",
     "test:integration": "jest --config jest.config.integration.js",
+    "test:integration:keep-alive": "TESTCONTAINERS_KEEP_ALIVE=true jest --config jest.config.integration.js",
     "test": "npm run test:unit && npm run test:integration",
     "test:coverage:unit": "jest --coverage --config jest.config.unit.js",
     "test:coverage:integration": "jest --coverage --config jest.config.integration.js",
     "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration",
+    "test:containers:stop": "docker ps -q --filter \"label=org.testcontainers.reuse=true\" | xargs -r docker stop",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write \"src/**/*.ts\""
