🔧 [CONFIG] Renommage queue RabbitMQ order.notifications

--- a/service/.env.example
+++ b/service/.env.example
@@ -23,4 +23,4 @@ RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=
-RABBITMQ_QUEUE_COMMANDE_STATUS=commande.status.changed
+RABBITMQ_QUEUE_COMMANDE_STATUS=order.notifications
