--- a/service/package.json
+++ b/service/package.json
@@ -8,11 +8,10 @@
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "test:unit": "jest --config jest.config.unit.js",
-    "test:integration": "jest --config jest.config.integration.js",
-    "test:integration:keep-alive": "TESTCONTAINERS_KEEP_ALIVE=true jest --config jest.config.integration.js",
+    "test:integration": "TESTCONTAINERS_KEEP_ALIVE=true jest --config jest.config.integration.js",
     "test": "npm run test:unit && npm run test:integration",
     "test:coverage:unit": "jest --coverage --config jest.config.unit.js",
-    "test:coverage:integration": "jest --coverage --config jest.config.integration.js",
+    "test:coverage:integration": "TESTCONTAINERS_KEEP_ALIVE=true jest --coverage --config jest.config.integration.js",
     "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration",
     "test:containers:stop": "docker ps -q --filter \"label=org.testcontainers.reuse=true\" | xargs -r docker stop",
     "lint": "eslint src/**/*.ts",
@@ -47,13 +46,10 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
-    "class-validator": "^0.14.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "joi": "^17.12.0",
     "mysql2": "^3.9.0",
     "redis": "^4.6.12",
     "winston": "^3.11.0"
