🔧 [CONFIG] Reprise de la partie reuse des containers dans testcontainer
- test:integration garde les conteneurs actifs par défaut
- Suppression du script test:integration:keep-alive (redondant)
- Suppression des dépendances inutilisées (class-validator, joi, express-rate-limit)

--- a/service/package.json
+++ b/service/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "test:unit": "jest --config jest.config.unit.js",
-    "test:integration": "TESTCONTAINERS_KEEP_ALIVE=true jest --config jest.config.integration.js",
+    "test:integration": "jest --config jest.config.integration.js --detectOpenHandles",
     "test": "npm run test:unit && npm run test:integration",
     "test:coverage:unit": "jest --coverage --config jest.config.unit.js",
-    "test:coverage:integration": "TESTCONTAINERS_KEEP_ALIVE=true jest --coverage --config jest.config.integration.js",
+    "test:coverage:integration": "jest --coverage --config jest.config.integration.js",
     "test:coverage": "npm run test:coverage:unit && npm run test:coverage:integration",
     "test:containers:stop": "docker ps -q --filter \"label=org.testcontainers.reuse=true\" | xargs -r docker stop",
     "lint": "eslint src/**/*.ts",
